CLOUDSTACK-771:Instance Table misalignment : when instance is created with long display name:Solved by using the concept of Ellipses in CSS

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -441,13 +441,16 @@ body.login {
 div.list-view table tbody td span {
   display: block;
   float: left;
-  max-width: 210px;
+  max-width: 100px;
   word-wrap: break-word;
   text-indent: 0;
   margin-left: 12px;
   line-height: 15px;
-  overflow: auto;
+  overflow: hidden;
   overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
 }
 
 div.list-view div.toolbar div.section-switcher div.section-select label {
